Api changes
- Changed general api item fetch amount to 24;
- Added categorias/{id}/productos endpoint and updated docs accordingly.
